--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,154 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background:#111;
+  color:#fff;
+  font-family: 'Open Sans', sans-serif;
+}
+h2{
+  color:#fff;
+}
+label{
+  color:#fff;
+}
+a{
+  color:#fff;
+}
+a:focus{
+  color:#fff;
+}
+.header{
+  background:#333;
+}
+.header .logo{
+  font-size:30px;
+  font-weight:bold;
+}
+.navbar{
+  padding-top:0;
+  padding-bottom:0;
+}
+.navbar-nav{margin-top:18px;}
+.nav-item.nav-link{
+  font-weight:bold;
+  font-size:24px;
+}
+.container{
+  background:#333;
+  border-radius:10px;
+}
+.center{
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  margin:auto;
+  width: 200px;
+  height: 100px;
+  z-index: 10000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div.table{
+
+
 }
+.table{
+  color:#fff;
+}
+.table .rdt_TableHeader{
+  display:none;
+}
+.table .rdt_Table,
+.rdt_TableCell {
+  background:#333;
+  color:#fff;
+}
+.table .rdt_TableHead div{
+  color:#fff;
+  font-size:14px;
+  font-weight:bold;
+  background:#333;
+}
+.table tbody tr td{
+  color:#c6c75b;
+  font-size:14px;
+}
+.table .rdt_TableCell span.green{
+  color: #c6c75b;
+}
+.table .rdt_TableCell span.white{
+  color: #fff;
+}
+.table .rdt_TableCell span.red{
+  color: #F65164;
+}
+.table .rdt_TableCell span.blue{
+  color:rgb(68, 155, 226);
+}
+
+.total_cases{
+  color: rgb(101, 221, 155);
+  font-weight: bold;
+  text-align: center;
+  border-bottom: 0;
+  font-size: 40px;
+  margin-bottom: 0px;
+}
+
+.total_deceased{
+  color: #F65164;
+  font-weight: bold;
+  text-align: center;
+  border-bottom: 0;
+  font-size: 40px;
+  margin-bottom: 0px;
+}
+
+.total_serious{
+  color: rgb(248, 245, 64);
+  font-weight: bold;
+  text-align: center;
+  border-bottom: 0;
+  font-size: 40px;
+  margin-bottom: 0px;
+}
+
+.total_recovered{
+  color: rgb(68, 155, 226);
+  font-weight: bold;
+  text-align: center;
+  border-bottom: 0;
+  font-size: 40px;
+  margin-bottom: 0px;
+}
+footer{
+  background:#333;
+  height:50px;
+}
+
+@media (min-width: 576px) {  }
+
+@media (max-width: 768px) {
+  .header .logo{
+    font-size:13px;
+  }
+  .container-fluid{padding-left:0;padding-right:0;}
+  .cont_table{padding:0;}
+}
+
+@media (min-width: 768px) {
+  div.table{
+    overflow-x:hidden;
+  }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  div.table{
+    overflow-x:hidden;
+  }
+
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {  }
